[gd_scene load_steps=2 format=3 uid="uid://bqxvhxqxqxqxq"]

[ext_resource type="Script" uid="uid://cn7gk50c3jvdi" path="res://scripts/ui/main_menu.gd" id="1_0x0x0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x0x0")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 100.0
offset_right = -20.0
offset_bottom = 180.0
grow_horizontal = 2
text = "The Evolution of Labubu: Wakuku"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "–ù–∞—á–∞—Ç—å –Ω–æ–≤—É—é –∏–≥—Ä—É"

[node name="ContinueButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "–ü—Ä–æ–¥–æ–ª–∂–∏—Ç—å"

[node name="AchievementsButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "–î–æ—Å—Ç–∏–∂–µ–Ω–∏—è"

[node name="SettingsButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
text = "üîä –ó–≤—É–∫ –í–ö–õ"


[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "v1.0.0"
horizontal_alignment = 2
